// The MIT License
//
// Copyright (c) 2020 Temporal Technologies Inc.  All rights reserved.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package query;

option go_package = "go.temporal.io/temporal-proto/query";
option java_package = "io.temporal.proto.query";
option java_multiple_files = true;
option ruby_package = "Temporal::Proto";

enum QueryResultType {
    Answered = 0;
    Failed = 1;
}

enum QueryRejectCondition {
    // None indicates that query should not be rejected.
    None = 0;
    // NotOpen indicates that query should be rejected if workflow is not open.
    NotOpen = 1;
    // NotCompletedCleanly indicates that query should be rejected if workflow did not complete cleanly.
    NotCompletedCleanly = 2;
}

enum QueryConsistencyLevel {
    // Eventual indicates that query should be eventually consistent.
    Eventual = 0;
    // Strong indicates that any events that came before query should be reflected in workflow state before running query.
    Strong = 1;
}

